# baku-casa

./: .dockerignore  .gitignore  README.md  baku.code-workspace
backend/: README.md  alembic.ini  baku.db  logging.dev.ini  logging.prod.ini  logging.test.ini  pyproject.toml
backend/logs/: backend.dev.human.log.2026-03-07  backend.dev.json.log.2026-03-07  backend.prod.human.log.2026-03-07  backend.prod.json.log.2026-03-07
backend/migrations/: env.py
backend/migrations/versions/: 0001_f0001_auth_tables.py  0002_f0001_operator_singleton_guard.py  0003_f0002_owners_table.py  0004_f0002_owners_model_evolution.py  0005_f0002_owners_tax_id_unique_index.py  0006_f0003_properties_tables.py
backend/src/baku/backend/: __init__.py  main.py
backend/tests/: conftest.py
backend/tests/contract/: test_no_hardcoded_pagination_defaults.py  test_pagination_mandatory_collections.py  test_pagination_precedence_contract.py
backend/tests/contract/auth/: test_bootstrap_contract.py  test_login_logout_contract.py  test_password_change_contract.py
backend/tests/contract/owners/: __init__.py  test_create_owner_contract.py  test_delete_owner_contract.py  test_get_owner_detail_contract.py  test_list_owners_contract.py  test_update_owner_contract.py
backend/tests/contract/properties/: test_create_property_contract.py  test_delete_property_contract.py  test_property_queries_contract.py  test_update_property_contract.py
backend/tests/integration/: test_collection_responses_are_bounded.py  test_pagination_limits_from_configuration.py  test_pagination_precedence_en0202.py
backend/tests/integration/auth/: test_auth_config_compatibility.py  test_bootstrap_flow.py  test_login_lockout_flow.py  test_login_logout_flow.py  test_password_rotation_flow.py
backend/tests/integration/bootstrap/: __init__.py  test_bootstrap_error_traceability.py  test_bootstrap_responsibility_separation.py  test_dependency_wiring_equivalence.py  test_entrypoint_boundaries.py  test_fail_fast_bootstrap_errors.py  test_http_surface_unchanged.py  test_single_composition_root.py
backend/tests/integration/configuration/: __init__.py  test_aggregated_validation_errors.py  test_missing_required_config.py  test_persistence_test_profile_activation.py  test_precedence_resolution.py  test_runtime_db_profile_isolation.py  test_startup_valid_config.py  test_test_db_url_precedence.py  (+2 more)
bot/: README.md  pyproject.toml
bot/tests/: test_bot_smoke.py
(+299 files in other folders)
